# QuizGame

./: .gitignore  CMakeLists.txt  README.md
compiled/makefiles/: makefileLinux.makefile  makefileWindows.makefile  windowsCompile.bat
description/: description.tex
include/Controller/: GameManager.hpp
include/View/: MainMenu.hpp  ViewComponent.hpp  ViewMode.hpp
include/View/Console/: MainMenu.hpp
src/Controller/: GameManager.cpp  main.cpp
src/View/: MainMenu.cpp
src/View/Console/: MainMenu.cpp
